globus-gsi-cert-utils (9.15-3+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e, replace docbook with asciidoc

 -- Globus Toolkit <support@globus.org>  Mon, 12 Sep 2016 08:39:10 -0400

globus-gsi-cert-utils (9.14-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:03:04 -0400

globus-gsi-cert-utils (9.12-1+gt6.@distro@) @distro@; urgency=low

  * Spelling

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:37:12 -0400

globus-gsi-cert-utils (9.11-1+gt6.@distro@) @distro@; urgency=low

  * GT-606: fix encoding for CN=(limited) proxy
  * GT-610: globus-gsi-cert-utils crash

 -- Globus Toolkit <support@globus.org>  Mon, 06 Jul 2015 09:52:36 -0400

globus-gsi-cert-utils (9.10-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Doxygen markup fixes
  * Fix dependency version
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Wed, 24 Sep 2014 13:33:01 -0400

globus-gsi-cert-utils (9.9-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gsi-cert-utils (9.8-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gsi-cert-utils (9.8-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gsi-cert-utils (9.8-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:44 -0400

globus-gsi-cert-utils (9.7-1+gt6.@distro@) @distro@; urgency=low

  * Handle bad CA choice better

 -- Globus Toolkit <support@globus.org>  Wed, 04 Jun 2014 13:45:51 -0400
