@@ -1,3 +1,9 @@
+globus-gsi-cert-utils (9.16-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add const qualifier to avoid casting with OpensSL 1.1.0
+
+ -- Globus Toolkit <support@globus.org>  Fri, 06 Jan 2017 13:28:48 -0500
+
 globus-gsi-cert-utils (9.15-3+gt6.@distro@) @distro@; urgency=low
 
   * Update for el.5 openssl101e, replace docbook with asciidoc
